--- a/foods/templates/foods/detail.html
+++ b/foods/templates/foods/detail.html
@@ -1,2 +1,32 @@
 {% extends 'base.html' %}
 {% load static %}
+{% block content %}
+<div class="all-page-title page-breadcrumb">
+    <div class="container text-center">
+        <div class="row">
+            <div class="col-lg-12">
+                <h1>{{details}}</h1>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="container" style="margin: 20px auto">
+    <div class="row">
+            <div class="col-md-6">
+                <img src="{{details.photo.url}}" alt="{{foods.name}} Photo" class="img-fluid">
+            </div>
+            <div class="col-md-6">
+                <h3>Description:</h3>
+                <p>{{details.description}}</p>
+                <h3>Rate:</h3>
+                <p>{{details.rate}}</p>
+                <h3>Price:</h3>
+                <p>${{details.price}}</p>
+                <h3>Type:</h3>
+                <p>{{details.food_type}}</p>
+                <p>Tags: <span class="badge bg-primary">{{details.tags}}</span></p>
+                <p>Time to Ready: {{details.time}} minutes</p>
+            </div>
+        </div>
+    </div>
+{% endblock %}
